# bazel-devcontainer-debian

./: .bazelrc  .gitattributes  .gitignore  MODULE.bazel  REPO.bazel
.devcontainer/: devcontainer.json
.devcontainer/recovery/: devcontainer.json
.github/workflows/: upload-container.yml
image/: BUILD.bazel  defs.bzl
image/upload/: BUILD.bazel
platform/: BUILD.bazel
platform/constraint/: BUILD.bazel
source/apt/: BUILD.bazel  apt-packages.lock.json  apt-packages.yaml  defs.bzl
source/bazelisk/: BUILD.bazel  build.bazelisk.bzl  copyright  extensions.bzl
source/config/: BUILD.bazel  defs.bzl
source/vscode/: BUILD.bazel
tools/cosign/: BUILD.bazel
tools/multitool/: multitool.lock.json
tools/zstd/: BUILD.bazel
