load("@rules_pkg//pkg:mappings.bzl", "pkg_mklink")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

# Refresh lockfile.
alias(
    name = "refresh",
    actual = "@apt_packages//:lock",
)

pkg_mklink(
    name = "sh_symlink",
    link_name = "sh",
    target = "bash",
)

pkg_tar(
    name = "symlinks",
    srcs = [
        ":sh_symlink",
    ],
    package_dir = "./usr/bin",
)

pkg_tar(
    name = "apt",
    srcs = [],
    compressor = "//tools/zstd",
    compressor_args = "--ultra -22",
    extension = "tar.zst",
    deps = [
        ":symlinks",
        "@apt_packages",
    ],
)
